[gd_scene load_steps=7 format=3 uid="uid://b8j4hhedcjf4a"]

[ext_resource type="Script" path="res://scene/Menu.gd" id="1_1gnmu"]
[ext_resource type="Texture2D" uid="uid://bph1kn2j8mbpd" path="res://resources/Placeholder_Background.png" id="2_um15i"]
[ext_resource type="PackedScene" uid="uid://cnu8mvcrs1lsp" path="res://options_menu/options_menu.tscn" id="3_5qtdn"]
[ext_resource type="AudioStream" uid="uid://n3lxy7uot8ug" path="res://scene/Notre Dame.mp3" id="4_rd5oi"]

[sub_resource type="SystemFont" id="SystemFont_fc7wl"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_aaotd"]
font_names = PackedStringArray("Impact")

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1gnmu")

[node name="TextureRect - Background Pic" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_um15i")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator - Does nothing" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_fc7wl")
theme_override_font_sizes/font_size = 60
text = "Placeholder Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Seperator2 - Does nothing" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../Exit_Button")
theme_override_fonts/font = SubResource("SystemFont_aaotd")
theme_override_font_sizes/font_size = 24
text = "Start
"

[node name="Options_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_aaotd")
theme_override_font_sizes/font_size = 24
text = "Options
"

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start_Button")
theme_override_fonts/font = SubResource("SystemFont_aaotd")
theme_override_font_sizes/font_size = 24
text = "Exit
"

[node name="Options_Menu" parent="." instance=ExtResource("3_5qtdn")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rd5oi")
volume_db = -3.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit_Button" to="." method="_on_exit_button_pressed"]
